--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "@babel/core": "7.6.0",
     "@sentry/electron": "1.0.0",
     "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
+    "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-preset-react-app": "^9.1.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "electron-log": "^3.0.9",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-config-react-app": "^5.1.0",
     "eslint-loader": "3.0.2",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
@@ -46,7 +46,7 @@
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
-    "react-app-polyfill": "^1.0.4",
+    "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -56,7 +56,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "^2.3.0",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
@@ -88,7 +88,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^7.1.1"
+    "electron": "^7.1.4"
   },
   "jest": {
     "roots": [
